--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,8 @@ button {
 @media (max-width: 1000px) {
 	.grocery-app {
 		margin-left: 1%;
+		width: 150%;
+		height: 150%;
 	}
 	.breadcrumb {
 		display: none;
