--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
+
 body {
 	background-color: #F2CD97;
+	width: 1024px;
+	margin-bottom: 0 auto;
 }
 h1 {
 	color: hsla(240,70%,30%,1);
+}
+
+h3 {
+	text-transform: uppercase;
 }
 
 .breadcrumb { 
@@ -75,32 +82,28 @@ h1 {
 	background-image: url('../images/vintage.png');
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-color: F2CD97;
+	background-color: #fff;
 	border: #000 4px solid;
-	width: 30em;
+	width: 35em;
 	height: 30em;
-	padding-top: 4rem;
-	padding-bottom: 4rem;
+	padding: 2rem 0 2rem 0;
 	margin-left: 20rem;
 	margin-top: 2rem;
 }
 
-.box {
-	width: 2.25em;
-	height: 1.625em;
-	background: transparent;
+
+input {
 	display: block;
-	margin-left: 20rem;
-	margin-top: -1.1rem;
+	height: 2rem;
+	position: absolute;
+	margin-top: 10px;
+	margin-left: 2rem;
 }
 
 .app-heading {
 	text-align: center;
 	background-color: transparent;
-	border-top: 1px white solid;
-	border-bottom: 1px white solid;
 	color: hsla(240,70%,30%,1);
-	margin-left: -2.5rem;
 }
 
 li {
@@ -114,11 +117,66 @@ li {
 button {
 	width: 25rem;
 	height: 3rem;
-	margin-left: 2.5rem;
-	margin-top: 12rem;
+	margin-top: 5rem;
 	background-color: #fff;
 	color: #000;
 }
+
+.add-button {
+	width: 25%;
+	height: 2.5rem;
+	margin-left: 17rem;
+	margin-top: 10px;
+}
+
+.purchased {
+	font-size: 10px;
+	text-transform: uppercase;
+	background-color: hsla(240,70%,30%,1);
+	color: #fff;
+	border: 1px solid hsla(240,70%,30%,1);
+	border-radius: 3px;
+	text-decoration: none;
+	margin: -.5rem 5rem 0 5rem ;
+	font-weight: bolder;
+	text-decoration: none;
+	width: 25%;
+	height: 100%;
+	float: right;
+}
+
+
+.completed {
+	text-decoration: line-through;
+	color: #000;
+	width: 10rem;
+	text-align: center;
+	margin-bottom: 10em;
+}
+
+.items {
+	height: 2rem;
+	display: block;
+	border: 1px #000 solid;
+	border-radius: 5px;
+	width: 18.5em;
+	background-color: #fff;
+	padding-top: 14px;
+	padding-left: 5px;
+	font-size: 20px;
+}
+
+#error {
+	margin-bottom: 5px 0;
+	color: #000;
+	display: none;
+}
+
+input, button {
+	font-size: 20px;
+	border-radius: 5px;
+}
+
 
 @media (max-width: 1000px) {
 	.grocery-app {
