--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 
 body {
-	background-color: #F2CD97;
-	width: 1024px;
-	margin-bottom: 0 auto;
+  background-color: #F2CD97;
+  font-family: 'Oswald', 'Futura', sans-serif;
+  margin: 0; 
+  padding: 0;
+  color: #fff;
 }
+
 h1 {
 	color: hsla(240,70%,30%,1);
 }
@@ -12,179 +15,211 @@ h3 {
 	text-transform: uppercase;
 }
 
-.breadcrumb { 
+h2 {
+	color: #fff;
+	background-color: #000;
+}
+
+.nav { 
 	list-style: none; 
 	overflow: hidden; 
 	font: 18px Helvetica, Arial, Sans-Serif;
+	margin-top: -5rem;
+	margin-bottom: -7rem;
 }
-.breadcrumb li { 
+.nav li { 
 	float: left; 
 }
-.breadcrumb li a {
+.nav li a {
 	color: white;
+	background-color: hsla(0, 100%, 28%, 1);
 	text-decoration: none; 
-	padding: 10px 50px 10px 50px;
-	background: brown;                   /* fallback color */
-	background: hsla(240,70%,30%,1); 
+	padding: 10px 48px 10px 52px;
 	position: relative; 
 	display: inline-block;
+	border-left: 1px #fff solid;	
+
 }
 
-.breadcrumb li a:after { 
-	content: " "; 
-	display: block; 
-	width: 0; 
-	height: 0;
-	border-top: 50px solid transparent;           
-	border-bottom: 50px solid transparent;
-	border-left: 30px solid hsla(240,70%,30%,1);
-	position: absolute;
-	top: 50%;
-	margin-top: -50px; 
-	left: 100%;
-	z-index: 2; 
-}
-
-.breadcrumb li a:before { 
-	content: " "; 
-	display: block; 
-	width: 0; 
-	height: 0;
-	border-top: 50px solid transparent;       
-	border-bottom: 50px solid transparent;
-	border-left: 30px solid white;
-	position: absolute;
-	top: 50%;
-	margin-top: -50px; 
-	margin-left: 1px;
-	left: 100%;
-	z-index: 1; 
-}
-
-.breadcrumb li a:hover { 
+.nav li a:hover { 
 	background-color: #fff; 
-	color: hsla(240,70%,30%,1);
+	color: hsla(0, 100%, 28%, 1);
 	font-weight: 900;
-	border: 1px hsla(240,70%,30%,1) solid;
-}
-.breadcrumb li a:hover:after { border-left-color: hsla(240,70%,30%,1) !important; }
+	border: 1px #000 solid;
 
-.calendar {
+}
+
+#page {
+  background-color: #fff;
+  margin: 0 auto 0 auto;
+  border: #fff 0.5em solid;
+  position: relative;
+  text-align: center;
+  background-color: #000;
+}
+
+.add-section {
 	background-color: #000;
-	color: #fff;	
-	width: 7.5rem;
-	text-align: center;
-	float: right;
-	margin-right: 25em;
 }
 
-.grocery-app{
-	background-image: url('../images/vintage.png');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-color: #fff;
-	border: #000 4px solid;
-	width: 35em;
-	height: 30em;
-	padding: 2rem 0 2rem 0;
-	margin-left: 20rem;
-	margin-top: 2rem;
+h1 {
+  text-align: center;
+  text-indent: -1000%;
+  line-height: 75px;
+  width: 117px;
+  margin: 0 auto 0 auto;
+  padding: -5px 10px 20px 10px;}
+
+
+ul > li {
+  background-color: hsla(240,70%,30%,1);
+  color: #fff;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  font-size: 24px;
+  letter-spacing: .05em;
+  list-style-type: none;
+  text-shadow: 2px 2px 1px #9f593f;
+  text-align: left;
+  height: 50px;
+  padding-left: 1em;
+  padding-top: 10px;
+  margin-left: -1.65em;
 }
 
-
-input {
-	display: block;
-	height: 2rem;
-	position: absolute;
-	margin-top: 10px;
-	margin-left: 2rem;
+ul > li > a {
+  color: #fff;
+  text-decoration: none;
+  padding-right: 36px;
 }
 
-.app-heading {
-	text-align: center;
-	background-color: transparent;
-	color: hsla(240,70%,30%,1);
+ul > li.complete > a {
+  background-image: none;
 }
 
-li {
-	list-style-type: none;
-	display: inline;
-	color: #000;
-	margin-top: auto;
+ul > .high {
+	background-color: hsla(0, 100%, 28%, 1);
 }
 
-
-button {
-	width: 25rem;
-	height: 3rem;
-	margin-top: 5rem;
-	background-color: #fff;
-	color: #000;
+ul > .medium {
+	background-color: hsla(28, 100%, 42%, 1);
 }
 
-.add-button {
-	width: 25%;
-	height: 2.5rem;
-	margin-left: 17rem;
-	margin-top: 10px;
-}
-
-.purchased {
-	font-size: 10px;
-	text-transform: uppercase;
-	background-color: hsla(240,70%,30%,1);
-	color: #fff;
-	border: 1px solid hsla(240,70%,30%,1);
-	border-radius: 3px;
-	text-decoration: none;
-	margin: -.5rem 2.5rem 0 5rem ;
-	font-weight: bolder;
-	text-decoration: none;
-	width: 25%;
-	height: 100%;
-	float: right;
-}
-
-
-.completed {
-	text-decoration: line-through;
-	color: #000;
-	width: 10rem;
-	text-align: center;
-	margin-bottom: 10em;
+ul > .low {
+	background-color: hsla(50, 100%, 42%, 1);
 }
 
 .items {
-	height: 2rem;
-	display: block;
-	border: 1px #000 solid;
-	border-radius: 5px;
-	width: 18.5em;
-	background-color: #fff;
-	padding-top: 14px;
-	padding-left: 5px;
-	font-size: 20px;
+	margin-top: -4rem;
 }
 
-#error {
-	margin-bottom: 5px 0;
-	color: #000;
+a.show{
+  font-size: 12px; 
+  padding: 5px; 
+  letter-spacing: 0; 
+  position: relative;
+  top: -5px;
+  left: 10px;}
+
+/* form example */
+#newItemButton {
+	padding: 20px 0 75px 20px; 
 	display: none;
+	background-color: #000;
 }
 
-input, button {
-	font-size: 20px;
-	border-radius: 5px;
+#itemDescription {
+	width: 360px;
 }
 
-
-@media (max-width: 1000px) {
-	.grocery-app {
-		margin-left: 1%;
-		width: 480px;
-		height: 480px;
-	}
-	.breadcrumb {
-		display: none;
-	}
+#newItemForm input[type='submit'] {
+	margin-top: 0; 
+	text-align: left;
 }
+
+/* FORM STYLES */
+
+form {
+  padding: 0 20px 20px 20px;
+}
+
+input[type='text'] {
+  background-color: #999;
+  color: #333;
+  font-size: 24px;
+  width: 96%;
+  padding: .25rem .25rem 0.75rem .25rem;
+  border: 1px solid #999;
+  border-radius: 8px;
+  margin: -2rem 0 1rem 0 ;
+}
+
+input[type='text']:focus {
+  border: 1px solid #fff;
+  background-color: #fff;
+  outline: none;
+}
+
+input[type='submit'], a.add, button, a.show {
+  background-color: hsla(0, 100%, 28%, 1);
+  color: #f3dad1;
+  border-radius: 8px;
+  border: none;
+  padding: 8px 10px;
+  font-family: 'Oswald', 'Futura', sans-serif;
+  font-size: 18px;
+  text-decoration: none;
+  margin-top: -0.5rem;
+  text-transform: uppercase;
+}
+
+input[type='submit'], a.add, button {
+  float: right;
+  margin-right: 1rem;
+} 
+
+input[type='submit']:hover, a.add:hover, a.show:hover {
+  background-color: #fff;
+  color: hsla(0, 100%, 28%, 1);
+  cursor: pointer;}
+
+::-webkit-input-placeholder {color: #403c3b; font-family: arial, sans-serif;}
+:-moz-placeholder { /* Firefox 18- */ color: #403c3b; font-family: arial, sans-serif;}
+::-moz-placeholder {  /* Firefox 19+ */ color: #403c3b; font-family: arial, sans-serif;}
+:-ms-input-placeholder { color: #403c3b; font-family: arial, sans-serif;}
+
+/* Responsive Styles */
+
+@media only screen and (max-width: 500px) {
+  body {
+      background-color: #403c3b;
+  }
+  #page {
+    max-width: 480px;
+  }
+    .breadcrumb li a {
+  	display: none;
+  }
+}
+@media only screen and (min-width: 501px) and (max-width: 767px) {
+  #page {
+    max-width: 480px;
+    margin: 20px auto 20px auto;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+  #page {
+    max-width: 480px;
+    margin: 20px auto 20px auto;
+  }
+  .breadcrumb li a{
+  	width: 50%;
+  }
+}
+/* Larger screens act like a demo for the app */
+@media only screen and (min-width: 960px) {
+  #page {
+    max-width: 480px;
+    margin: 20px auto 20px auto;
+  	}
+  }
