--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,25 @@ h2 {
 	background-color: #000;
 }
 
+.priority {
+	text-align: center;
+	width: 20rem;
+	margin-left: 18rem;
+}
+
+.red {
+	background-color:  hsla(0, 100%, 28%, 1);
+}
+
+.orange {
+	background-color: hsla(28, 100%, 42%, 1);
+}
+
+.yellow {
+	background-color: hsla(50, 100%, 42%, 1);
+
+}
+
 .nav { 
 	list-style: none; 
 	overflow: hidden; 
@@ -165,7 +184,7 @@ input[type='submit'], a.add, button, a.show {
   color: #f3dad1;
   border-radius: 8px;
   border: none;
-  padding: 8px 10px;
+  padding: 10px 10px;
   font-family: 'Oswald', 'Futura', sans-serif;
   font-size: 18px;
   text-decoration: none;
@@ -183,10 +202,8 @@ input[type='submit']:hover, a.add:hover, a.show:hover {
   color: hsla(0, 100%, 28%, 1);
   cursor: pointer;}
 
-::-webkit-input-placeholder {color: #403c3b; font-family: arial, sans-serif;}
-:-moz-placeholder { /* Firefox 18- */ color: #403c3b; font-family: arial, sans-serif;}
-::-moz-placeholder {  /* Firefox 19+ */ color: #403c3b; font-family: arial, sans-serif;}
-:-ms-input-placeholder { color: #403c3b; font-family: arial, sans-serif;}
+::-webkit-input-placeholder {color: #333; font-family: arial, sans-serif;}
+:-ms-input-placeholder { color: #333; font-family: arial, sans-serif;}
 
 /* Responsive Styles */
 
