--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h1 {
 
 
 ul > li {
-  background-color: hsla(240,70%,30%,1);
+  background-color: hsla(0, 100%, 28%, 1);
   color: #fff;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
